namespaces/live-1.cloud-platform.service.justice.gov.uk/categorisation-tool-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: categorisation-tool-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "categorisation-tool"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: michael.willis@digtal.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/categorisation-tool.git"
